allow NativeIO for logserver